bdr.BDR.scala.error
Erreur de compilation :
BDR:5: error: illegal start of simple expression
  else if (litMessage=="A"){avance()}
  ^